Closed Bug 781985 Opened 12 years ago Closed 12 years ago

IonMonkey: visitCallDOMNative() must dropArguments()

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: sstangl, Assigned: sstangl)

References

()

Details

(Whiteboard: [ion:p1])

Attachments

(2 files)

Attached file Backtrace.
Asserts in an x86_64 Ion debug browser by visiting http://lights.elliegoulding.com, waiting for it to load, and clicking "Play".

The problem is most likely that visitCallDOMNative() is missing a call to dropArguments().

Backtrace attached.
Attached patch patchSplinter Review
Fixes crash. Site runs happily if jankily.
Attachment #651065 - Flags: review?(efaust)
Summary: IonMonkey: Assertion Failure: pushArgumentSlots_.empty() in CodeGenerator.cpp:1244 → IonMonkey: visitCallDOMNative() must dropArguments()
Attachment #651065 - Flags: review?(efaust) → review+
http://hg.mozilla.org/projects/ionmonkey/rev/32b7b76d111c
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: