Bug 781985 - visitCallDOMNative() must dropArguments(). r=efaust